feat(title-B) : add HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Aura</h1>
     <header>Ceci est un magnifique header</header>
     <footer>
         Simple footer content
