feat(nav) : add HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <h1>tung tung tung tung tung sahur</h1>
     <h1>Aura</h1>
     <header>Ceci est un magnifique header</header>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
     <footer>
         Simple footer content
         <ul>
