feat(cta): add CTA button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>tung tung tung tung tung sahur</h1>
+    <p>Tralalero Tralala.</p>
+    <button>Call to Action</button>
+
     <h1>Aura</h1>
     <header>Ceci est un magnifique header</header>
     <footer>
